syntax = "proto3";
package lsbProto;

// Error code result for response packet
message Result {
  enum ErrorCode {
    NONE = 0;

    UNASSIGNED_ERROR = 201;

    MAIN_INIT_NETWORK_INIT_FAIL = 206;

    USER_MGR_ID_DUPLICATION = 211;
    USER_MGR_MAX_USER_COUNT = 212;
    USER_MGR_INVALID_SESSION_INDEX = 213;
    USER_MGR_NOT_CONFIRM_USER = 214;
    USER_MGR_REMOVE_INVALID_SESSION = 221;

    ROOM_ENTER_INVALID_DOMAIN = 271;
    ROOM_ENTER_INVALID_LOBBY_INDEX = 272;
    ROOM_ENTER_INVALID_ROOM_INDEX = 273;
    ROOM_ENTER_CREATE_FAIL = 274;
    ROOM_ENTER_NOT_CREATED = 275;
    ROOM_ENTER_MEMBER_FULL = 276;
    ROOM_ENTER_EMPTY_ROOM = 277;

    ROOM_LEAVE_INVALID_DOMAIN = 286;
    ROOM_LEAVE_INVALID_LOBBY_INDEX = 287;
    ROOM_LEAVE_INVALID_ROOM_INDEX = 288;
    ROOM_LEAVE_NOT_CREATED = 289;
    ROOM_LEAVE_NOT_MEMBER = 290;

    ROOM_CHAT_INVALID_DOMAIN = 296;
    ROOM_CHAT_INVALID_LOBBY_INDEX = 297;
    ROOM_CHAT_INVALID_ROOM_INDEX = 298;
  }
  ErrorCode error = 1;
}

message UserInfo {
  int32 index = 1;
  string id = 2;
}